--- a/wercker.yml
+++ b/wercker.yml
@@ -20,7 +20,7 @@ build:
             username: $DOCKER_USERNAME
             password: $DOCKER_PASSWORD
             repository: $DOCKER_REPO
-            registry: https://iad.ocir.io/v2
+            registry: $DOCKER_REGISTRY
 
 deploy-to-kubernetes:
     box: python:2.7
